logs/hypermark.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bleach'...
Listing './lib/python3.5/site-packages/bleach-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/html2markdown-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/_trie'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/hypermark'...
Compiling './lib/python3.5/site-packages/hypermark/api.py'...
***   File "./lib/python3.5/site-packages/hypermark/api.py", line 12
    GRUBER_URLINTEXT_PAT = re.compile(ur'(?i)\b((?:https?://|www\d{0,3}[.]|[a-z0-9.\-]+[.][a-z]{2,4}/)(?:[^\s()<>]+|\(([^\s()<>]+|(\([^\s()<>]+\)))*\))+(?:\(([^\s()<>]+|(\([^\s()<>]+\)))*\)|[^\s`!()\[\]{};:\'".,<>?\xab\xbb\u201c\u201d\u2018\u2019]))')
                                                                                                                                                                                                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hypermark-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/mistune-0.8.3.dist-info'...
Listing './lib/python3.5/site-packages/mistune_contrib'...
Listing './lib/python3.5/site-packages/mistune_contrib-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/webencodings'...
Listing './lib/python3.5/site-packages/webencodings-0.5.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
